[tool.poetry]
name = "git-flow-hub"
version = "0.1.0"
description = ""
authors = ["Yukihiro <12211343+y-marui@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
